# foxbox

./: Cargo.toml
components/core/: Cargo.toml
components/core/src/: broker.rs  jsworkers.rs  lib.rs  traits.rs  utils.rs
components/jsworkers/: Cargo.toml  readme.md  todo.md  todo.txt
components/jsworkers/js/: index.html  objectencoder.js  remoteworkers.js  worker1.js
components/jsworkers/js/examples/demo/: index.html  sw.js  worker1.js
components/jsworkers/js/examples/todomvc/: index.html
components/jsworkers/js/examples/todomvc/js/: store.js  worker.js
components/jsworkers/js/lib/: remoteworkers.js
components/jsworkers/src/: bridge.rs  broker.rs  lib.rs  message.rs  router.rs  runtime.rs  user_router.rs  workers.rs
components/openzwave-adapter/src/: lib.rs
src/: context.rs  controller.rs  dummy_adapter.rs  events.rs  http_server.rs  main.rs  service.rs  traits.rs  websocket_server.rs
src/stubs/: controller.rs
static/: main.js  websocket.html
