[package]
name = "jsworkers"
version = "0.1.0"
authors = ["The Project Link Developers"]
publish = false

[replace]
"iron:0.3.0" = { path = "../../iron-fork/" }

[dependencies]
bitsparrow = "0.3.2"
foxbox_core = { path = "../core" }
foxbox_users = { git = "https://github.com/fxbox/users.git", rev = "d4e5277" }
log = "^0.3"
rusqlite = "0.6.0"
url = "0.5.7"
ws = "0.4.8"
serde = "0.7.0"
serde_json = "0.7.0"
serde_macros = "0.7.2"

[dependencies.iron]
version = "0.3.0"
default-features = true
features = ["ssl"]
