[package]
name = "jsworkers"
version = "0.1.0"
authors = ["The Project Link Developers"]
publish = false

[replace]
"iron:0.3.0" = { path = "../../iron-fork/" }

[dependencies]
bitsparrow = "0.3.2"
foxbox_core = { path = "../core" }
foxbox_users = { git = "https://github.com/fxbox/users.git", rev = "ec53c3a" }
hyper = "0.8.1"
log = "^0.3"
rusqlite = "0.6.0"
url = "0.5.7"
ws = "0.4.8"
serde = "0.8"
serde_json = "0.8"
serde_derive = "0.8"
uuid = { version = "0.2.2", features = ["v4"] }

[dependencies.iron]
version = "0.3.0"
default-features = true
features = ["ssl"]
